added meta image

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Fictional Resort Hotel Website build with React and Headless CMS Contentful"
+    />
+    <meta 
+      name='image'
+      property='og:image'
+      content='%PUBLIC_URL%/rsr.png'
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
